Classic cached planner does not pass query solution to the SBE plan explainer

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The classic cached planner for SBE uses nullptr for the query solution, this in turn leads us to construct the SBE plan explainer with empty query solution, and fails to generate the plan summary.

            Assignee:
            Rui Liu (Inactive)
            Reporter:
            Rui Liu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: