SERVER-96173 Pass query solution to the SBE plan explainer in classic cached planner (#28477)

GitOrigin-RevId: 1d7d80579353d626be99053a7db1b95dca97e1b8